--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <div class="group-refer mt-1" >
                             <div  type="text" class="input w-100 t-align-r">10</div>
 
-                            <img src="" class="tam-img-20 position" >
+                            <img src="assets/img/2_5224493713157265803.png" class="tam-img-50 position" >
                         </div>
 
                     </div>
@@ -85,14 +85,14 @@
                 <button class="button"> Connect Wallet</button>
             </div>  
         </div>
-        <!-- <button class="button-theme" id="theme">🌙</button> -->
+        <button class="button-theme" id="theme">🌞</button>
         
     </nav>
     <main class="wrapper p-1">
         <h1 class="tite ">Lottery</h1>
         <div class="d-flex a-items center">
             <div class="t-align-c">
-                <img src="" alt="">
+                <img src="assets/img/2_5224493713157265803.png" alt="" class="tam-img-250">
                 <h2 class="title">Get your tickets now! <br>
                 <span class="link">7D 12H 5Min</span> until the draw
                 </h2>
